# Kestrel

./: .gitignore  README.md  pyproject.toml
docs/: best-practices.md
src/: __init__.py  actions.py  agent.py  browser.py  cli.py  llm.py  logging.py  ollama_manager.py  types.py  validators.py
src/kestrel/: __init__.py  actions.py  agent.py  browser.py  cli.py  llm.py  logging.py  ollama_manager.py  types.py  validators.py
src/kestrel/auth_providers/: __init__.py  base.py  clerk.py
