[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kestrel"
version = "0.1.0"
description = "Autonomous browser-testing agent powered by Playwright and local LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kestrel Contributors"}
]
keywords = ["playwright", "llm", "testing", "automation", "ollama"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "aiohttp>=3.9.0",
    "PyYAML>=6.0.1",
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
kestrel = "kestrel.cli:main"

[project.urls]
Repository = "https://github.com/kestrel-testing/kestrel"

[tool.hatch.build.targets.wheel]
packages = ["src/kestrel"]
